[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/VAB.gd" type="Script" id=1]
[ext_resource path="res://Assets/hangerBackground.jpeg" type="Texture" id=2]

[node name="VAB" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="TextureRect" parent="."]
margin_left = -516.879
margin_top = -305.288
margin_right = 1483.12
margin_bottom = 819.712
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="GUI" type="Control" parent="."]
margin_right = 44.0
margin_bottom = 36.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ItemsPanel" type="PanelContainer" parent="GUI"]
margin_right = 318.0
margin_bottom = 606.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PartTabs" type="TabContainer" parent="GUI/ItemsPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 311.0
margin_bottom = 599.0

[node name="Tanks" type="ItemList" parent="GUI/ItemsPanel/PartTabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
allow_reselect = true
fixed_icon_size = Vector2( 25, 25 )

[node name="Engines" type="ItemList" parent="GUI/ItemsPanel/PartTabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
allow_reselect = true
fixed_icon_size = Vector2( 25, 25 )

[node name="Control Modules" type="ItemList" parent="GUI/ItemsPanel/PartTabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
allow_reselect = true
fixed_icon_size = Vector2( 25, 25 )

[node name="MouseGetter" type="RayCast2D" parent="."]
enabled = true
exclude_parent = false
cast_to = Vector2( 0, 0 )

[node name="Area2D" type="Area2D" parent="."]

[connection signal="item_selected" from="GUI/ItemsPanel/PartTabs/Tanks" to="." method="_on_Tanks_item_selected"]
[connection signal="item_selected" from="GUI/ItemsPanel/PartTabs/Engines" to="." method="_on_Engines_item_selected"]
[connection signal="item_selected" from="GUI/ItemsPanel/PartTabs/Control Modules" to="." method="_on_Control_Modules_item_selected"]
